<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.direct2guests.d2g_tv.Activities.MainActivity">

    <RelativeLayout
        android:id="@+id/continueButton"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background_lg"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">



        <TextView
            android:id="@+id/uid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:text="TextView"
            android:textColor="#fff"
            android:textSize="25sp"
            android:visibility="invisible" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/welcomeTxtV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/indexWelcome"
                android:textColor="#fff"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/toTxtV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcomeTxtV"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30sp"
                android:text="@string/indexTo"
                android:textColor="#fff"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/hotelNameTxtV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toTxtV"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/indexHotelName"
                android:textColor="#fff"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/guestNameTxtV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hotelNameTxtV"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:fontFamily="cursive"
                android:text="@string/indexGuestName"
                android:textColor="#fff"
                android:textSize="70sp"/>

            <Button
                android:id="@+id/button"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_below="@+id/guestNameTxtV"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="false"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_transparent"
                android:onClick="continueButton"
                android:text="@string/indexContinueButton"
                android:textColor="#fff"
                android:textSize="25sp" />
        </RelativeLayout>
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/montebello"
            android:visibility="gone"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
